<package format="3">
  <name>stretch_msgs</name>
  <version>0.0.0</version>
  <description>Message definitions for Hello-Robot Stretch</description>
  <maintainer email="tobit@robots.ox.ac.uk">Tobit Flatscher</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
